version 0.19

* THANKS file added.
* Building directories re-arranged. Directory packages arranged with dialog,
   and c-ares tarballs added. 
	
* Advanced to libcurl 7.16.0.

* Instead of bloody hacking used in loader_smooth.c mperform_smooth () to get
   access to client_context* cctx, finally we are using setting and getting cctx via
   PRIVATE pointer API. The hacking broke compiling against libcurl starting 
   from 7.15.5.
	
* Effective URL will be outputted to logfile, thanks for 
   CURLINFO_EFFECTIVE_URL facility. Usefull to provide real urls
   after redirections, not just the urls client starts with
  

version 0.18, 1/11/2006 svn-21

-Major improvement of configuration. Several command line options removed and
instread the configuration file enhanced. Configuration file separated to several
sections, namely:
- GENERAL;
- LOGIN;
- UAS (user activity simulation, like fetching URLs and sleeping);
- LOGOFF;
Only GENERAL section is a MUST, whereas other sections are enabled whenever
is necessary, depending on the purpose of the testing. 

-Several more options for LOGIN and LOGOFF parts are added.

- Login and logoff of clients may be configured to be done only once or to
be cycled with optional UAS-load in between of login and logoff cycles.

- Smooth-loading mode with statistics is finally back to work after being
broken for a while.

- Options -a, -w and -z removed. Instead of using -a option, one may dublicate
the login url in UAS section.



version 0.17, 10/11/2006

-Added ChangeLog and TODO files.
	
-README - improved to contain information, available before only
 from curl_loader -h

-Authentication using POST has been unfortunately disabled in storming
 mode. Fixed the bug, with thanks to Arik Nahmany, Arik.Nahmany@vocaltec.com,
 for pointing this.

-Some people may be interested to load their servers with multiple logging of
 the same user and with the same password. We have allowed a more